--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-#id {
+.id {
 	background-image: url('https://github.com/aubreeabril/dream-neighborhood-project/blob/master/img%20files/backgroundhouse.jpg');
 	width:100%;
 }
