--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
-<<<<<<< HEAD
+
 .header {
-	background-image: url('https://github.com/aubreeabril/dream-neighborhood-project/blob/master/img%20files/backgroundhouse.jpg');
+	background-image: url('https://github.com/aubreeabril/dream-neighborhood-project/blob/master/img%20files/backgroundhouse.jpg?raw=true');
 	width:100%;
 }
-=======
-//samples
 
 h1 {
 	font-size: 100px;
@@ -18,4 +16,4 @@ li {
 	margin-right: 20px;
 	text-align: center;
 }
->>>>>>> da78fe5c380aa23b2752fa9efe3ffa952587057e
+
