--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 
 .header {
-	background-image: url('https://github.com/aubreeabril/dream-neighborhood-project/blob/master/img%20files/backgroundhouse.jpg?raw=true');
-	width:100%;
+	background-image: url('https://github.com/aubreeabril/dream-neighborhood-project/blob/master/img%20files/backgroundhouse.jpg?raw=true') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 h1 {
