--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 
 .header {
+  width: 100vw;
+  height: 100vh;
 	background-image: url('https://github.com/aubreeabril/dream-neighborhood-project/blob/master/img%20files/backgroundhouse.jpg?raw=true') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -19,4 +21,3 @@ li {
 	margin-right: 20px;
 	text-align: center;
 }
-
